--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BACKEND=https://online-bookstore-backend-production.up.railway.app/
+# REACT_APP_BACKEND=https://online-bookstore-backend-production.up.railway.app
+REACT_APP_BACKEND=http://localhost/online-bookstore-backend
