--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# REACT_APP_BACKEND=https://online-bookstore-backend-production.up.railway.app
-REACT_APP_BACKEND=http://localhost/online-bookstore-backend
+REACT_APP_BACKEND=https://online-bookstore-backend-production.up.railway.app
