--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.17.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
